--- a/css/styles.css
+++ b/css/styles.css
@@ -36,5 +36,5 @@ body {
     left: 50%;
     margin-right: -50%;
     margin-bottom: -50%;
-    transform: translate(-50%, -50%)
+    transform: translate(-50%, -50%);
 }
