--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@ a:hover {
 }
 
 .btn-warning,
-.btn-warning:hover,
 .btn-warning:focus {
   color: #AE494B;
   text-shadow: none; /* Prevent inheritence from `body` */
@@ -14,11 +13,15 @@ a:hover {
   padding: 9px;
 }
 
+.btnn:hover {
+  color: #C6C6C6;
+}
+
 html,
 body {
 
 	background: url(../landscape11.jpg) no-repeat center center fixed;
-	background-size: cover;
+	background-size: cover;9D9E92
 }
 
 .container{
@@ -37,4 +40,8 @@ body {
     left: 50%;
     margin-right: -50%;
     -webkit-transform: translate(-50%, -50%);
+}
+
+.container a{
+  margin: 5px;
 }
